# Initial-Rust-project

./: .gitattributes  Cargo.toml  README.md
src/: database.rs  main.rs
